Further notes added on the liquid language

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h1>Lorem ipsum dolor.</h1>
+
+  <button style="display: block; margin: 0 auto;">Buy Now</button>
   
 </body>
 </html>
